Fix underline link on mobile

--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -1,14 +1,17 @@
 a,
-a:focus,
-a:hover,
 a:not(.wp-element-button) {
-	text-underline-offset: 2px;
 	transition: text-underline-offset 200ms;
+    text-decoration-thickness: 3px;
+	text-decoration-color: var(--wp--preset--color--secondary);
+	text-underline-offset: 0.2em;
 }
 
+a:focus,
 a:hover,
 a:hover:not(.wp-element-button) {
-	text-underline-offset: 5px;
+	text-decoration-color: var(--wp--preset--color--secondary);
+	text-decoration-thickness: 3px;
+	text-underline-offset: 0.4em;
 }
 
 a:where(:not(.wp-element-button))[target="_blank"]:after {
